@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0

' =========================
' CLASES PRINCIPALES
' =========================

class Usuario {
  + int id
  + String nombre
  + String email
  + String password
  + String rol
  + login()
  + logout()
}

class Administrador {
  + generarReporteMensual()
  + gestionarUsuarios()
}

class Empleado {
  + registrarVenta()
}

class Cliente {
  + consultarHistorial()
}

' Herencia
Administrador -up-|> Usuario
Empleado -up-|> Usuario
Cliente -up-|> Usuario

' =========================
' INVENTARIO
' =========================

class Producto {
  + int id
  + String nombre
  + float precioCompra
  + float precioVenta
  + int stock
  + actualizarStock()
}

class MovimientoStock {
  + int id
  + Date fecha
  + String tipoMovimiento
  + int cantidadAnterior
  + int cantidadNueva
}

Producto "1" -- "0..*" MovimientoStock
Usuario "1" -- "0..*" MovimientoStock : realiza >

' =========================
' VENTAS
' =========================

class Venta {
  + int id
  + Date fecha
  + float total
  + calcularTotal()
}

class DetalleVenta {
  + int cantidad
  + float precioUnitario
  + calcularSubtotal()
}

Venta "1" -- "1..*" DetalleVenta
Producto "1" -- "0..*" DetalleVenta
Empleado "1" -- "0..*" Venta : registra >

' =========================
' FINANZAS
' =========================

class ReporteMensual {
  + int mes
  + int anio
  + float ingresos
  + float egresos
  + float utilidadNeta
  + calcularUtilidad()
}

Administrador --> ReporteMensual

@enduml
